# real_time_stock_analyzer

./: CMakeLists.txt  README.md
dashboard/: app.py
data/: api.csv  custom.csv  dates_mapping.csv  final.csv  get50Data.py  output.csv  sample_1.csv  sample_2.csv  sample_BPCL.csv  sample_ITC.csv  sample_RELIANCE.csv  sorted_prices.csv
data/Nifty50_Data/: ADANIENT_data.csv  ADANIPORTS_data.csv  APOLLOHOSP_data.csv  ASIANPAINT_data.csv  AXISBANK_data.csv  BAJAJ-AUTO_data.csv  BAJAJFINSV_data.csv  BAJFINANCE_data.csv  BHARTIARTL_data.csv  BPCL_data.csv  BRITANNIA_data.csv  CIPLA_data.csv  COALINDIA_data.csv  DIVISLAB_data.csv  DRREDDY_data.csv  EICHERMOT_data.csv  ETERNAL_data.csv  GRASIM_data.csv  HCLTECH_data.csv  HDFCBANK_data.csv  HDFCLIFE_data.csv  HEROMOTOCO_data.csv  HINDALCO_data.csv  HINDUNILVR_data.csv  ICICIBANK_data.csv  INDUSINDBK_data.csv  INFY_data.csv  ITC_data.csv  JSWSTEEL_data.csv  KOTAKBANK_data.csv  LTIM_data.csv  LT_data.csv  M&M_data.csv  MARUTI_data.csv  NESTLEIND_data.csv  NIFTY50_data.csv  NTPC_data.csv  ONGC_data.csv  POWERGRID_data.csv  RELIANCE_data.csv  (+11 more)
include/: Analyzer.h  FileManager.h  Stream.h
src/: Analyzer.cpp  FileManager.cpp  NGEProcessor.cpp  Stream.cpp  main.cpp
